@@ -2,6 +2,10 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Development
+
+- Require Emacs 29.
+
 * Version 1.6 (2025-09-08)
 
 - Templates support the =:doc= and =:ann= keywords for documentation and annotation
